[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/FishHook.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/FishSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TimedEvent.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/ShakeCamera2D.gd" type="Script" id=5]
[ext_resource path="res://scenes/CameraFocus.gd" type="Script" id=6]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="FishHook" parent="." instance=ExtResource( 1 )]

[node name="FishSpawner" parent="." instance=ExtResource( 3 )]

[node name="TimedEvent" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 5 )
target = NodePath("../CameraFocus")

[node name="CameraFocus" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="UI" parent="." instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="area_exited" from="FishHook" to="FishHook" method="_on_FishHook_area_exited"]
[connection signal="exploded" from="FishHook" to="." method="_on_FishHook_exploded"]
[connection signal="hooked" from="FishHook" to="." method="_on_FishHook_hooked"]
[connection signal="event_failed" from="TimedEvent" to="." method="_on_TimedEvent_event_failed"]
